--- a/Simple Sidebar Design/style.css
+++ b/Simple Sidebar Design/style.css
@@ -1,57 +1,84 @@
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: rgb(62, 62, 218);
+  background-color: rgb(62, 62, 218);
 }
 
 .sidebar-container {
-    width: 250px;
-    height: 100svh;
-    background-color: #041c2c;
+  width: 250px;
+  height: 100svh;
+  background-color: #041c2c;
+  transition: left 0.3s ease-in-out;
 }
 
 .first-container {
-    width: 100%;
-    min-height: 100vh;
+  width: 100%;
+  min-height: 100vh;
+}
+
+.fa-bars {
+  color: white;
+  margin: 20px;
+  cursor: pointer;
+}
+
+#header-sidebar {
+  width: 100%;
+  height: 50px;
+  font-family: sans-serif;
+  background-color: #063146;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.close-sb {
+  padding: 5px 10px;
+  border-radius: 500px;
+  border: none;
+  position: absolute;
+  left: 210px;
+  top: 6px;
+  transition: 0.6s;
+}
+
+.close-sb:hover {
+  opacity: 0.3;
 }
 
 #header-sidebar p {
-color: white;
-font-size: 1.7em;
-line-height: 75px;
-text-align: center;
-font-family: sans-serif;
-background-color: #063146;
+  color: white;
+  font-size: 1.8em;
 }
 
 #sidebar-menus li {
-    padding-left: 50px;
-    list-style-type: none;
-    line-height: 50px;
-    border-top: 1px rgb(255, 255, 255, .1) solid;
-    border-bottom: 1px black solid;
-    font-family: sans-serif;
-    font-size: 0.9em;
+  padding-left: 50px;
+  list-style-type: none;
+  line-height: 50px;
+  border-top: 1px rgb(255, 255, 255, 0.1) solid;
+  border-bottom: 1px black solid;
+  font-family: sans-serif;
+  font-size: 0.9em;
 }
 
 #sidebar-menus a {
-    text-decoration: none;
-    color: white;
-    transition: 0.4s;
+  text-decoration: none;
+  color: white;
+  transition: 0.4s;
 }
 
 #sidebar-menus a:hover {
-    padding-left: 20px;
+  padding-left: 20px;
 }
 
 #sidebar-menus a:active {
-    color: blue;
+  color: blue;
 }
 
 #sidebar-menus i {
-    margin-right: 16px;
+  margin-right: 16px;
 }
